modified borders, fixed spacing in incident

--- a/spacetrade/css/styles.css
+++ b/spacetrade/css/styles.css
@@ -16,7 +16,7 @@ display: none;
 	overflow:scroll;
 }
 #wrapper div {
-	border:#fff 1px solid;
+	/*border:#fff 1px solid;*/
 	/* inner borders */
 	box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -204,6 +204,9 @@ ul li {
 	background:transparent url("../img/map_icon.png") no-repeat scroll 14px 1.5em / 50% 50%;
 	text-align:center;
 	font-size:.9em;
+}
+.location {
+	border-bottom:#fff 2px solid;
 }
 #map ul li {
 	border-bottom:#fff 1px solid;
